# StrawHats-University-Administration-System

./: README.md
QML project/: AddProfessor.qml  AddStudent.qml  AllClasses.qml  AllProfessors.qml  AllStudents.qml  ClassPage.qml  HomePage.qml  Login.qml  Professor.qml  StrawHats.pro  Student.qml  Welcome.qml  login.cpp  login.h  main.cpp  main.qml  qml.qrc
Qt project/: CMakeLists.txt  CMakeLists.txt.user.19b9bfc  class.cpp  class.h  dashboard.cpp  dashboard.h  dashboard.ui  hall.cpp  hall.h  login.cpp  login.h  login.ui  person.cpp  person.h  professor.cpp  professor.h  student.cpp  student.h
StrawHats-Uni-Admin-System/: CMakeLists.txt
